--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Manukato Brands</title>
 
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <style>
         body {
             display: flex;
@@ -116,6 +119,16 @@
         .social-links a:hover{
             background-color:darkblue;
         }
+
+        .social-media img {
+            width: 24px;
+            margin: 0 10px;
+            transition: opacity 0.3s;
+        }
+
+        .social-media img:hover {
+            opacity: 0.7;
+        }
         
 
 
@@ -182,7 +195,7 @@
 
         <div class="about-section">
             <h2>Fun Facts</h2>
-            <p>Did you know that our founder,Antony Ndungu, has a background in Business and Information Technology from Jomo Kenyatta University of Agriculture and Technology, coupled with a lifelong passion for technical work pieces? This unique combination has led to the creation of some of our most innovative and user friendly customer service experience."</p>
+            <p>Did you know that our founder,Antony Ndungu, has a background in Business and Information Technology from Jomo Kenyatta University of Agriculture and Technology, coupled with a lifelong passion for technical work pieces? This unique combination has led to the creation of some of our most innovative and user friendly customer service experience.</p>
         </div>
     </main>
     <footer>
