--- a/collections.html
+++ b/collections.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manukato Brands - Collections</title>
+
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         body {
             display: flex;
@@ -163,15 +167,49 @@
             height: 2px;
             background-color: #555;
         }
+
+        #scroll-indicator {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: white;
+            text-align: center;
+            opacity: 0.8;
+        }
+
+        .arrow {
+            width: 20px;
+            height: 20px;
+            border: 2px solid white;
+            border-left: none;
+            border-top: none;
+            transform: rotate(45deg);
+            margin: 10px auto;
+            animation: bounce 2s infinite;
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0) rotate(45deg); }
+            40% { transform: translateY(-10px) rotate(45deg); }
+            60% { transform: translateY(-5px) rotate(45deg); }
+        }
+
     </style>
 
 </head>
 <body>
+     <!-- Loading Animation -->
+     <div id="loading">
+        <div class="spinner"></div>
+    </div>
+
     <nav>
         <a href="index.html"><img src="images/manukatologo.png" alt="Manukato Logo"></a>
         <div>
             <a href="collections.html">Collections</a>
             <a href="aboutus.html">About Us</a>
+           
         </div>
     </nav>
     <div id="background"></div>
@@ -785,8 +823,10 @@
 
         </main>
     <footer>
+        
         &copy; 2025 Manukato Brands[@mb]. All rights reserved.
     </footer>
+
     <script>
 function openwhatsApp(productName) {
   const selectedSize = document.getElementById(productName).value;  // Get value from select element itself
