--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manukato Brands - Homepage</title>
+
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: sans-serif;
@@ -22,6 +25,7 @@
             background-position: center;
             z-index: -1;
             filter: blur(2px);
+            transform: translateZ(-1px) scale(1.2); /* Parallax effect */
         }
 
         #overlay {
@@ -65,7 +69,7 @@
 
         .button {
             background-color: rgba(255, 255, 255, 0.7);
-            color: white;
+            color: black;
             border: none;
             padding: 15px 30px;
             margin: 20px;
@@ -136,6 +140,10 @@
     </style>
 </head>
 <body>
+
+    <div id="loading">
+        <div class="spinner"></div>
+    </div>
     <nav>
         <a href="index.html"><img src="images/manukatologo.png" alt="Manukato Logo"></a>
         <div>
